--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Mimi Minecraft Launcher</title>
+    <title>Mimic Launcher</title>
     <link href="style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
@@ -25,7 +25,7 @@
     <main class="content">
         <div class="page active" id="home">
             <div class="page-content">
-                <h1 class="pixel-title" id="innder">Welcome to Mimi Launcher</h1>
+                <h1 class="pixel-title" id="innder">Welcome to Mimic Launcher</h1>
                 <div class="launcher-options">
                     <div class="option-group">
                         <label for="username">Username:</label>
