fix syntax commit

--- a/src/index.html
+++ b/src/index.html
@@ -72,6 +72,7 @@
                                    placeholder="Enter game directory" type="text">
                             <button data-translate="selectPathButton" id="game-directory-select">Select Path</button>
                             <button data-translate="defaultButton" id="game-directory-default">Default</button>
+                            <button data-translate="openButton" id="game-directory-open">Open</button>
                         </div>
                     </div>
                     <div class="option-group full-width">
