based fix comit and add config

--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,14 @@
 <body>
 <div class="app-container">
     <nav class="sidebar">
-        <ul>
+        <ul class="sidebar-top">
             <li><a class="active" data-page="home" href="#" title="Home">🏠</a></li>
             <li><a data-page="profile" href="#" title="Profile">👤</a></li>
-            <li><a data-page="settings" href="#" title="Settings">⚙️</a></li>
             <li><a data-page="mods" href="#" title="Mods">🧩</a></li>
+        </ul>
+        <ul class="sidebar-bottom">
+            <li><a data-page="settings" href="#" title="Settings">⚙️</a></li>
+            <li><a href="#" id="exit-btn" title="Exit">🚪</a></li>
         </ul>
     </nav>
     <main class="content">
