based fix comit and add config

--- a/src/index.html
+++ b/src/index.html
@@ -128,8 +128,9 @@
                                placeholder="Search for mods" type="text">
                     </div>
                     <div class="filter-group">
-                        <select id="mod-loader" data-translate="modLoader">
-                            <option value="" data-translate="allLoaders">All Loaders</option>
+                        <!--TODO-->
+                        <select id="mod-loader">
+                            <option value="">All Loaders</option>
                             <option value="forge">Forge</option>
                             <option value="fabric">Fabric</option>
                             <option value="quilt">Quilt</option>
