--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,7 @@
                         </div>
                         <div class="option-group">
                             <label><input id="auto-updates" type="checkbox"> <span data-translate="enableAutoUpdates">Enable Auto Updates</span></label>
-                            <label><input id="alpha-versions" type="checkbox"> <span data-translate="showAlphaVersions">Show Alpha Versions</span></label>
+                            <label><input id="alpha-versions" type="checkbox"> <span data-translate="showAlphaVersions">Show Unusual Versions</span></label>
                         </div>
                     </div>
                 </div>
