added ukrainian language

--- a/src/index.html
+++ b/src/index.html
@@ -105,6 +105,7 @@
                             <label data-translate="language" for="language-select">Language:</label>
                             <select id="language-select">
                                 <option value="en">English</option>
+                                <option value="uk">Українська</option>
                                 <option value="ru">Русский</option>
                                 <option value="de">Deutsch</option>
                                 <option value="fr">Français</option>
