--- a/src/index.html
+++ b/src/index.html
@@ -107,6 +107,7 @@
                                 <option value="en">English</option>
                                 <option value="uk">Українська</option>
                                 <option value="ru">Русский</option>
+                                <option value="kk">Қазақша</option>
                                 <option value="de">Deutsch</option>
                                 <option value="fr">Français</option>
                             </select>
